Cleaned up some code, made a master file

--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
         }
         </style>
         
-        <script src="dataset.js"></script>
+        <script src="photo.js"></script>
     </head>
     </body>
         hi
